# vgtaethel

./: Cargo.toml  README.md  README_DEPLOY.md  Roadmap  docker-compose.yaml  go.sum
crates/vgt-api/: Cargo.toml
crates/vgt-api/handlers/: nexus_socket.rs
crates/vgt-api/src/: handlers.rs  main.rs  state.rs
crates/vgt-bridge/: package.json  tsconfig.json
crates/vgt-core/: Cargo.toml
crates/vgt-core/src/: engine.rs  lib.rs  models.rs  nexus.rs
crates/vgt-skills/: Cargo.toml
crates/vgt-skills/src/: fs.rs  guard.rs  lib.rs  rag.rs  shell.rs
crates/vgt-ui/: package.json  tailwind.config
frontend/: app.js  style.css
frontend/modules/: agent_builder.js  approval_dialog.js  chat_addmessage.js  control.js  run_approval_monitor.js  secrets.js  security.js  voice.js
go-aethel/: COMPILE_FIX_PROOF.md  Info.txt  RELEASE_NOTES.md  agent_builder_ui_test.go  app.go  app_models_test.go  approval.go  approval_test.go  asset_paths_test.go  audio_handlers.go  build_aethel.bat  chat_agent.go  chat_agent_integration_test.go  chat_agent_test.go  chat_handlers.go  config.go  crypto.go  diagnostics.go  diagnostics_test.go  file_snapshots.go  file_snapshots_test.go  frontend_i18n_test.go  frontend_static_test.go  gating_focus_math_test.go  global_watch_preferences_test.go  global_watch_projection_test.go  globe_math_runtime_test.go  go.mod  go.sum  guard.go  handler_secrets.go  intelligence_integration_test.go  kernel_log.go  key_store_other.go  key_store_windows.go  key_store_windows_test.go  main.go  memory_handlers.go  personal.go  personal_test.go  (+44 more)
go-aethel/agent/: capability_catalog.go  chat_agent.go  chat_agent_logic_test.go  context.go  continuity.go  continuity_test.go  intent_router.go  prompt.go  prompt_compaction_test.go  run_engine.go  run_engine_test.go  task_engine.go
go-aethel/docs/: STRUCTURE.md
go-aethel/frontend/: aethel-ui-production.css  app.js  index.html  style.css  vgt-components.css
go-aethel/handlers/: alert_ai_handlers.go  alert_ai_handlers_test.go  asset_handlers.go  asset_paths.go  audio_handlers.go  chat_agent_handlers.go  chat_handlers.go  chat_tool_allowlist_test.go  context.go  diagnostics_handlers.go  exports.go  handler_secrets.go  intelligence_handlers.go  kernel_handlers.go  mail_handlers.go  market_handlers.go  memory_handlers.go  models_handler_test.go  osint_handlers.go  personal_handlers.go  release_handlers.go  runs_handlers.go  security_handlers.go  session_handlers.go  session_util.go  tasks_handlers.go  (+7 more)
(+209 files in other folders)
