[package]
name = "vgt-api"
version = "0.1.1"
edition = "2021"

[dependencies]
vgt-core = { path = "../vgt-core" }
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1.0"
futures-util = "0.3" # Für Stream Handling
tokio-stream = "0.1"