[package]
name = "vgt-core"
version = "0.1.2"
edition = "2021"

[dependencies]
# Internal Modules
vgt-skills = { path = "../vgt-skills" }

# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"], default-features = false }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Env
dotenvy = "0.15"

# Logging
tracing = "0.1"

# Async Utilities
futures-util = "0.3"
async-stream = "0.3"