[package]
name = "vgt-skills"
version = "0.1.2" # Security Patch Bump
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["process", "fs", "io-util", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# VGT RAG ARSENAL
fastembed = "3" 
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# SECURITY LAYER (NEU)
regex = "1.10"
lazy_static = "1.4" # Für effiziente kompilierte Regexes